# xsql

./: .flake8  README.md  pyproject.toml
.github/workflows/: ruff.yml
lib/xsql/: __init__.py  alias.py  aws.py  cli.py  completion.py  config.py  db.py  exc.py  formatters.py  history.py  lexer.py  notice.py  output.py  parsers.py  postgres.py  prompt.py  quote.py  run.py  split.py  time.py  translate.py
tools/: xsql
