[project]
name = "xsql"
version = "0.1.0"
description = "snowflake cli"
authors = [{ name = "Ryan P. Kelly" }]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "prompt-toolkit>=3.0.51",
    "pygments>=2.15.1",
    "sqlalchemy>=0.9.2",
    "sqlglot[rs]>=26.29.0",
]

[project.optional-dependencies]
postgres = [
    "psycopg2>=2.9.9",
]
snowflake = [
    "snowflake-sqlalchemy>=1.5.3",
]

[build-system]
requires = ["setuptools"]

[tool.distutils.egg_info]
egg_base = "lib"

[tool.setuptools.package-dir]
"" = "lib"

[dependency-groups]
dev = [
    "flake8>=7.2.0",
    "ruff>=0.12.0",
]

[tool.setuptools]
script-files = [
  "tools/xsql",
]
